# salazar

./: .gitignore  .npmignore  CLAUDE.md  LICENSE  PROMPT.md  README.md  SESSION-CONTEXT.md  app_spec.md  features.json  integration-test.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts
cli/: codebase_context.md  feature_list.json  init.sh  package-lock.json  package.json  status-command-spec.md  tsconfig.json  tsup.config.ts  validator_assessment.json
dashboard/: package-lock.json  package.json
demo/: build-demo.tape  build-replay.sh  counter-spec.md  install-and-launch.tape  launch-salazar.sh  run-tui-demo.sh  setup-demo.sh  tui-demo.tape
harness/: app_spec.md  pyproject.toml  test_spec.md  tui_spec.md
harness/harness/: __init__.py  client.py  dashboard.py  main.py  multi_orchestrator.py  orchestrator.py  progress.py  validators.py
harness/harness/agents/: architect.py  evaluator.py  explorer.py  generator.py  planner.py
harness/harness/prompts/: architect.md  explorer.md  generator.md  hardening.md  planner.md
prompts/: generator.md  planner.md
salazar/: dashboard_v2_spec.md  leftpad_spec.md  pyproject.toml
salazar/salazar/: __init__.py  client.py  config.py  config_tui.py  dashboard.py  main.py  multi_orchestrator.py  orchestrator.py  paths.py  progress.py  resources.py  security.py  storage.py  validators.py
salazar/salazar/agents/: architect.py  evaluator.py  explorer.py  generator.py  planner.py
salazar/salazar/prompts/: __init__.py  evaluator.md  generator.md
specs/: steer-spec-while-building.md
src/: index.ts
(+180 files in other folders)
