[project]
name = "agent-id-harness"
version = "0.1.0"
description = "Autonomous coding harness for building the Agent Identity Token standard"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27",
    "gitpython>=3.1",
]

[project.scripts]
harness = "harness.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
