[project]
name = "salazar"
version = "0.1.0"
description = "Salazar — autonomous coding orchestrator. The tool that builds itself."
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27",
    "gitpython>=3.1",
    "textual>=0.61",
]

[project.scripts]
salazar = "salazar.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["salazar"]

[tool.hatch.build]
include = [
    "salazar/prompts/*.md",
]
